Exercícios da semana 10

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -20,6 +20,18 @@
             <label for="confirmarSenha">Confirmar senha</label>
             <input type="password" name="confirmarSenha" formControlName="confirmarSenha">
         </div>
+        <div class="elemento-formulario">
+            <label for="peso">Peso (kg)</label>
+            <input type="number" name="peso" formControlName="peso">
+        </div>
+        <div class="elemento-formulario">
+            <label for="altura">Altura (cm)</label>
+            <input type="number" name="altura" formControlName="altura">
+        </div>
+        <div class="elemento-formulario">
+            <label for="codigoUsuario">Código do usuário</label>
+            <input type="text" name="codigoUsuario" formControlName="codigoUsuario">
+        </div>
         <div class="botoes-formulario">
             <button class="entrar" type="submit">Cadastrar</button>
             <button type="button" (click)="voltar()">Voltar</button>
