--- a/src/app/diet-detail/diet-detail.component.html
+++ b/src/app/diet-detail/diet-detail.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
-<h2>{{alimentoTemplate?.name}}</h2>
-<img src={{alimentoTemplate?.imageLink}} alt="Product Image" width="500px"/>
-<p><strong>Descrição:</strong> {{alimentoTemplate?.description}}</p>
-<p><strong>Calorias por porção:</strong> {{alimentoTemplate?.qttCalories}} kcal</p>
-<p><strong>Porções diárias:</strong> {{alimentoTemplate?.qttDaysFeed}}</p>
+<div>
+    <h2>{{alimentoTemplate?.name}}</h2>
+    <img src={{alimentoTemplate?.imageLink}} alt="Product Image" width="200px" />
+    <p><strong>Descrição:</strong> {{alimentoTemplate?.description}}</p>
+    <p><strong>Calorias por porção:</strong> {{alimentoTemplate?.qttCalories}} kcal</p>
+    <p><strong>Porções diárias:</strong> {{alimentoTemplate?.qttDaysFeed}}</p>
+</div>
