--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav>
+    <ul>
+        <li><a routerLink="">Início</a></li>
+        <li><a routerLink="/diet">Dietas</a></li>
+        <li><a routerLink="/profile">Perfil</a></li>
+    </ul>
+</nav>
