--- a/src/app/diet-detail/diet-detail.component.html
+++ b/src/app/diet-detail/diet-detail.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<app-sidebar></app-sidebar>
-<div>
+<app-sidebar style="width: 100px;"></app-sidebar>
+<div style="margin-left: 100px;">
     <h2>{{alimentoTemplate?.name}}</h2>
     <img src={{alimentoTemplate?.imageLink}} alt="Product Image" width="200px" />
     <p><strong>Descrição:</strong> {{alimentoTemplate?.description}}</p>
