--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,7 @@
-
+<nav>
+    <ul>
+        <li><a routerLink="/home">Início</a></li>
+        <li><a routerLink="/diet">Dietas</a></li>
+        <li><a routerLink="/profile">Perfil</a></li>
+    </ul>
+</nav>
